--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">planting-planner</string>
+    <string name="setting">설정</string>
+    <string name="calendar">캘린더</string>
+    <string name="plant_list">식물목록</string>
 </resources>
