--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="plant_picture">식물사진</string>
     <string name="water_alarm_setting">물주기 알람 설정</string>
     <string name="plant_date">우리 집에 온 날짜</string>
+    <string name="file_provider_authorities">com.yoonbae.planting.planner</string>
     <string-array name="waterPeriod">
         <item>매일</item>
         <item>이틀</item>
